Work around NavBar issue on Safari for iOS (#431)
Force the content `position` to `absolute` and set the `top` to the height of the navigation bar. This is hacky and somewhat breaks the encapsulation of the `Sticky` component.

Fixes #428

--- a/src/app/components/App/App.module.scss
+++ b/src/app/components/App/App.module.scss
@@ -105,5 +105,10 @@
     > * {
       flex-grow: 1;
     }
+
+    /* #region Workaround for content jumping on navigation on Safari for iOS */
+    top: 48px;
+    position: absolute;
+    /* #endregion Workaround for content jumping on navigation on Safari for iOS */
   }
 }
